Finished genre import service